fewer words again

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
                 <br></br>
                 <br></br>
               <h1>Meet Marna</h1>
-              <p>Marna was an amazing woman who valued her friends, family and helping others. She passed away in 2008 from Pancreatic Cancer. This scholarship is in hier honor. </p>
+              <p>Marna was an amazing woman who valued her friends, family and helping others. This scholarship is in her honor. </p>
             
               <p><a class="btn btn-md btn-primary" href="\about" role="button">Learn More</a></p>
 
@@ -35,7 +35,7 @@
               <br></br>
               
               <h1>We awarded $15,000!</h1>
-              <p>Do you want to meet the 15 students that won an award this year?  </p>
+              <p>Do you want to meet the 15 students that won an award this year? We're so proud of them. </p>
             
               <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Meet Them</a></p>
             </div>
@@ -49,7 +49,7 @@
               <br></br>
              
               <h1>Applying for an award?</h1>
-              <p>Check out the eligibility requirements and apply for our scholarship. The applicaiton is open from Jan 1 to Mar 31.</p>
+              <p>Check out the eligibility requirements and apply for our scholarship. The applicaiton is open from 1/1 - 3/31.</p>
           
               <p><a class="btn btn-md btn-primary" href="#" role="button">Apply Now</a></p>
 
@@ -63,7 +63,7 @@
               <br></br>
               <br></br>
               <h1>Spiking for Scholarships</h1>
-              <p>Join the largest charity volleyball tournament in Central Jersey every June. Make a team or sign up yourself; either way you'll have a blast!</p>
+              <p>Join the largest charity volleyball tournament in Central Jersey. Make a team or sign up yourself and  have a blast!</p>
               <p><a class="btn btn-md btn-primary" href="\events" role="button">Join Now</a></p>
             
             </div>
