fewer words again

--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -3,30 +3,34 @@
 </h1>
 
 <div class = "container">
+		
+			<h2> Additional Scholarship Resources </h2> 
+
+		<hr class="featurette-divider"> </h4>
+
 	
-
-		<div class = "col-md-9 col-md-offset-1">
-
-
-		<hr class="featurette-divider">
-
-				TEST
+			<h2> Resources for Caregiviers </h2>	
 
 				
-		<hr class="featurette-divider">
-
 
 		<hr class="featurette-divider">
 
 
-		<hr class="featurette-divider">
-
-
-		<hr class="featurette-divider">
 
 
 		<hr class="featurette-divider">
 
 
 
+
+		<hr class="featurette-divider">
+
+
+
+		<hr class="featurette-divider">
+
+
+
+
+		<hr class="featurette-divider">
 </div>
