--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
       <li><%= link_to "About", about_path %></li> 
       <li><%= link_to "Scholars", scholars_path %></li>
       <li><%= link_to "Events", events_path %></li> 
-      <li><%= link_to "Resources", resources_path %></li>
+      <!-- <li><%= link_to "Resources", resources_path %></li> -->
       <li><%= link_to "Apply Here", applyhere_path %></li>
       <li><%= link_to "Donate", donate_path %></li>
     </ul> 
