--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Why did we start Marna's Pals? <span class="text-primary">For Marna</span></h2>
-          <p class="lead">The idea for Marna's Pals came after Marna passed away from Pancreatic Cancer in 2008. David Pal, Marna's son, was a Freshman at Rutgers University when she passed away and was fortunate to receive a lot of support from the University. When David graduated with no student loans, he realized how lucky he was and wanted to pay this forward by helping other students like him to afford to go to college. David recruited his friends and family to start an organizaiton with this purpose, and Marna's Pals was born</p>
+          <p class="lead">The idea for Marna's Pals came after Marna passed away from Pancreatic Cancer in 2008. David Pal, Marna's son, was a Freshman at Rutgers University when she passed away and was fortunate to receive support from the University. When David graduated with no student loans, he realized how lucky he was and wanted to pay this forward by helping other students like him to afford to go to college. David recruited his friends and family to start an organizaiton with this purpose, and Marna's Pals was born. Marna's Pals gives scholarships to students whose families have been affected by cancer. </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/marnaVarious 5_edited.JPG" alt="Generic placeholder image">
@@ -34,7 +34,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">And lastly, how to get involved. <span class="text-primary">Volunteer. Donate. Spread the Word.</span></h2>
           <p class="lead">
-              Marna's Pals is always for people to help withe vents, scholar recruitment and sponsorships. If you think that you or someone you know is interested in helping us make attending college easier for a student whose family has been affected by cancer, please reach out. Email dpal (at) marnaspals (dot) com
+              Marna's Pals is always looking for people to help with events, scholar recruitment and general sponsorships. If you think that you or someone you know is interested in helping to make college more affordable for a student whose family has been affected by cancer please reach out. Email <a href="mailto:dpal@marnaspals.com"> dpal@marnaspals.com </a>
           </p>
         </div>
         <div class="col-md-5">
@@ -52,7 +52,7 @@
         
 
 
-<video width="700" height="350" controls>
+<video width="800" height="350" controls>
 
   <source src="https://s3.amazonaws.com/marnaspals-dpal/news12NJ.mp4" type="video/mp4">
   </video>
