--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -42,7 +42,7 @@
   		<div class="item">
             <h2> School Supplies </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=C3QUD9H684748" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/supplies.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/supplies.jpg">
               </a>
         </div>
   	</div>    
@@ -57,7 +57,7 @@
   		<div class="item">
             <h2> 1 Month of Groceries </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QKYC9Z6VDRQP2" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/groceries.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/groceries.jpg">
               </a>
            
 		</div>
@@ -67,7 +67,7 @@
   		<div class="item">
             <h2> Parking Pass </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=H9ADUE86Y52DA" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/parkingpass.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/parkingpass.jpg">
               </a>
            
 		</div>
@@ -77,7 +77,7 @@
   		<div class="item">
             <h2> A Semester of Books </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K4XRXDU9NBVCA" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/semesteroftextbooks.jpeg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/semesteroftextbooks.jpeg">
               </a>
            
 		</div>
@@ -87,7 +87,7 @@
   		<div class="item">
             <h2> A Meal Plan </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SCEFYB6AZL3LN" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/mealplan.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/mealplan.jpg">
               </a>
            
 		</div>
