--- a/app/views/pages/applyhere.html.erb
+++ b/app/views/pages/applyhere.html.erb
@@ -1,8 +1,3 @@
-
-
-
-
-
 <div class="col-md-6 col-md-offset-3">
 <table class="table">
   <thead>
@@ -26,7 +21,7 @@
   		</tr>
   		<tr>
   				<th scope="row">3</th>
-  				<td>A Sibling/Parent/Self Must have been affected by cancer</td>
+  				<td>A Sibling/Parent/Self must have been affected by cancer</td>
   		</tr>
   		<tr>
   				<th scope="row">4</th>
