--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,13 +4,16 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, </h1>
+
+
+    <h1>Hello my Pal! </h1>
     <p>
-      You have successfully signed up to example.com.<br>
+      Thank you for visiting <%= @url %>. <br>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      Attached you will find our 9 tips to better scholarship applications! If you like it, please feel free to share it online! Periodically, we'll send updates and more ideas on how to win these awards! 
     </p>
-    <p>Thanks for joining and have a great day!</p>
+
+    <p> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com.marnaspals"> Instagram? </a> </p>
   </body>
 </html>
