--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -34,11 +34,11 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">And lastly, how to get involved. <span class="text-primary">Volunteer. Donate. Spread the Word.</span></h2>
           <p class="lead">
-              Marna's Pals is always looking for people to help with events, scholar recruitment and general sponsorships. If you think that you or someone you know is interested in helping to make college more affordable for a student whose family has been affected by cancer please reach out. Email <a href="mailto:dpal@marnaspals.com"> dpal@marnaspals.com </a>.
+              Marna's Pals is always looking for people to help with events, scholar recruitment and general sponsorships. If you think that you or someone you know is interested in helping to make college more affordable for a student whose family has been affected by cancer please reach out. Email <a href="mailto:dpal@marnaspals.com"> dpal@marnaspals.com. </a>
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Giving.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Giving.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
