--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -89,7 +89,7 @@
 <br>
 
 
-<form class="form-inline" action="#" class="new_subscriber" id="new_subscriber" method="post">
+<form class="form-inline" action="/subscribers" class="new_subscriber" id="new_subscriber" method="post">
   <div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="nHHdWoL8aq3/6rHKYiX64uu3tlOBmDTMdsG19dD7t70=" /></div>
 
   <div class="form-group">
