--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -15,5 +15,8 @@
     </p>
 
     <p> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com.marnaspals"> Instagram? </a> </p>
+
+    <img src="https://s3.amazonaws.com/marnaspals-dpal/thetips">
+    
   </body>
 </html>
