--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,19 +4,22 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-
-
     <h1>Hello my Pal! </h1>
+
     <p>
       Thank you for visiting <%= @url %>. <br>
     </p>
+
     <p>
-      Attached you will find our 9 tips to better scholarship applications! If you like it, please feel free to share it online! Periodically, we'll send updates and more ideas on how to win these awards! 
+      Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! Periodically, we'll send updates and more ideas on how to win awards! 
     </p>
 
-    <p> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com.marnaspals"> Instagram? </a> </p>
+    <p> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
-    <embed src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf">
+    <img src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf">
+
+    <a src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
+
 
   </body>
 </html>
