--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,7 +3,9 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body>
+  <body bgcolor="#5200A3" link="#A366E0">
+
+    <div class = "container">
     <h1>Hello my Pal! </h1>
 
     <p>
@@ -19,7 +21,7 @@
     <img src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf">
 
     <a src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
-
+  </div>
 
   </body>
 </html>
