--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,23 +3,23 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body>
+  <body style="background-color:#A366E0">
 
     <div class = "container">
 
-    <h1>Hello my Pal! </h1>
+    <h1 style="color: #FFFFFF">Hello my Pal! </h1>
 
-    <p style="color: #A366E0">
+    <p style="color: #FFFFFF">
       Thank you for visiting <%= @url %>. <br>
     </p>
 
-     <p style="color: #A366E0">
+     <p style="color: ##FFFFFF">
       Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! Periodically, we'll send updates and more ideas on how to win awards! 
     </p>
 
-    <p style="color: #A366E0"> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
+    <p style="color: ##FFFFFF"> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
-    <img src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf">
+    <img src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg">
 
     <a src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
 
