--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body style="background-color:#A366E0">
+  <body style="background-color:#5200A3">
 
     <div class = "container">
 
@@ -13,15 +13,15 @@
       Thank you for visiting <%= @url %>. <br>
     </p>
 
-     <p style="color: ##FFFFFF">
+     <p style="color: #FFFFFF">
       Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! Periodically, we'll send updates and more ideas on how to win awards! 
     </p>
 
-    <p style="color: ##FFFFFF"> <a href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
+    <p style="color: #FFFFFF"> <a style="color: #A366E0" href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a style="color: #A366E0" href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
     <img src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg">
 
-    <a src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
+    <a style="color: #A366E0" src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
 
  
 
