fix subscriber page

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -10,7 +10,7 @@
     <h1 style="color: #FFFFFF">Hello my Pal! </h1>
 
     <p style="color: #FFFFFF">
-      Thank you for visiting <%= @url %>. <br>
+      Thank you for visiting <a style="color: #A366E0" href="http://www.marnaspals.com">www.marnaspals.com/.</a> <br>
     </p>
 
      <p style="color: #FFFFFF">
@@ -19,9 +19,9 @@
 
     <p style="color: #FFFFFF"> <a style="color: #A366E0" href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a style="color: #A366E0" href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
-    <img src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg">
+    <img title="9tips.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg">
 
-    <a style="color: #A366E0" src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
+    <a src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
 
  
 
