--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -19,6 +19,28 @@
     <% @subscribers.each do |subscriber| %>
       <tr>
         <td><%= subscriber.email %></td>
+        
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<h1>Editing subscribers</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Email</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @subscribers.each do |subscriber| %>
+      <tr>
+        <td><%= subscriber.email %></td>
         <td><%= link_to 'Show', subscriber %></td>
         <td><%= link_to 'Edit', edit_subscriber_path(subscriber) %></td>
         <td><%= link_to 'Destroy', subscriber, method: :delete, data: { confirm: 'Are you sure?' } %></td>
