fix subscriber page

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -21,7 +21,7 @@
 
     <img title="9tips.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg">
 
-    <a src="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
+    <a style="color: #A366E0" href="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
 
  
 
