--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -14,14 +14,14 @@
     </p>
 
      <p style="color: #FFFFFF">
-      Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! Periodically, we'll send updates and more ideas on how to win awards! 
+      Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! Periodically, we'll send more cool stuff like this! 
     </p>
 
     <p style="color: #FFFFFF"> <a style="color: #A366E0" href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a style="color: #A366E0" href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
-    <img title="9tips.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg">
+    <img title="9 tips infographic.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9tipsinfographic.jpeg">
 
-    <a style="color: #A366E0" href="https://s3.amazonaws.com/marnaspals-dpal/thetips.pdf"> Download the PDF here. </a>
+    <a style="color: #A366E0" href="https://s3.amazonaws.com/marnaspals-dpal/9tipsinfographic.jpeg"> Download the PDF here. </a>
 
  
 
