--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -21,7 +21,7 @@
 
     <img title="9tips infographic.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9+tips+infographic.jpeg">
 
-    <a style="color: #A366E0" href="https://s3.amazonaws.com/marnaspals-dpal/9+tips+infographic.jpeg"> Download the PDF here. </a>
+    <a style="color: #A366E0" href="https://s3.amazonaws.com/marnaspals-dpal/9+tips+infographic.jpeg"> Download the image here. </a>
 
  
 
