--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -19,9 +19,9 @@
 
     <p style="color: #FFFFFF"> <a style="color: #A366E0" href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a style="color: #A366E0" href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
-    <img title="9tips infographic.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9+tips+infographic.jpeg">
+    <img title="9tips infographic.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9tipsinfographic(small).jpeg">
 
-    <a style="color: #A366E0" href="https://s3.amazonaws.com/marnaspals-dpal/9+tips+infographic.jpeg"> Download the image here. </a>
+    <a style="color: #A366E0" href="/infographic"> Download the image here. </a>
 
  
 
