--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="brand">
+    <a href="/">
      
      <img src= "assets/logo2.png">
     
@@ -24,7 +24,8 @@
       <li><%= link_to "Events", events_path %></li> 
       <!-- <li><%= link_to "Resources", resources_path %></li> -->
       <li><%= link_to "Apply Here", applyhere_path %></li>
-      <li><%= link_to "Donate", donate_path %></li>
+      <a href="/donate" class="pull-right"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation4.jpg"> </a>
     </ul> 
   </div><!-- /.navbar-collapse -->
+
 </nav>
