--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Why did we start Marna's Pals? <span class="text-primary">For Marna</span></h2>
-          <p class="lead">The idea for Marna's Pals came after Marna passed away from Pancreatic Cancer in 2008. David Pal, Marna's son, was a Freshman at Rutgers University when she passed away and was fortunate to receive support from the University. When David graduated with no student loans, he realized how lucky he was and wanted to pay this forward by helping other students like him to afford to go to college. David recruited his friends and family to start an organizaiton with this purpose, and Marna's Pals was born. Marna's Pals gives scholarships to students whose families have been affected by cancer. </p>
+          <p class="lead">The idea for Marna's Pals came after Marna passed away from Pancreatic Cancer in 2008. David Pal, Marna's son, was a Freshman at Rutgers University when she passed away and was fortunate to receive support from the University. When David graduated with no student loans, he realized how lucky he was and wanted to pay this forward by helping other students like him to afford to go to college. David recruited his friends and family to start an organization with this purpose, and Marna's Pals was born. Marna's Pals gives scholarships to students whose families have been affected by cancer. </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/marnaVarious 5_edited.JPG" alt="Generic placeholder image">
