--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,11 +22,11 @@
       <li><%= link_to "About", about_path %></li> 
       <li><%= link_to "Scholars", scholars_path %></li>
       <li><%= link_to "Events", events_path %></li> 
-      <li><%= link_to "                       ", resources_path %></li>
+      <!-- <li><%= link_to "Resources", resources_path %></li> -->
       <li><%= link_to "Apply Here", applyhere_path %></li>
       
     </ul> 
-    <a href="/donate" class="pull-right" vertical-align= "middle"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation4.jpg"> </a>
+    <a href="/donate" class="pull-right"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation7.jpg"> </a>
   </div><!-- /.navbar-collapse -->
 
 
