change donate now button

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 
        <p class = "wrapper">
 
-       	<a class="btn btn-lg btn-primary" href="donate" role="button">Donate Now</a>
+       	<a href="/donate"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation7.jpg"> </a>
 
        </p>
 	
