--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,9 +1,9 @@
 
-$body-bg: #5200A3;
+$body-bg: rgb(139,0,139);
 $navbar-inverse-bg: #bdc3c7;
-$link-color: #A366E0;
+$link-color: rgb(221,160,221);
 $navbar-inverse-link-color: #9900CC;
-$brand-primary: #A366E0;
+$brand-primary: rgb(138,43,226);
 $text-color: #FFFFFF;
 
 @import 'bootstrap';
