--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,15 +1,21 @@
 
-$body-bg: rgb(139,0,139);
-$navbar-inverse-bg: #bdc3c7;
-$link-color: rgb(221,160,221);
-$navbar-inverse-link-color: #9900CC;
+$body-bg: #FFFFFF;
+$navbar-default-bg: rgb(138,43,226);
+$link-color: rgb(139,0,139);
+$navbar-default-link-color: #FFF;
 $brand-primary: rgb(138,43,226);
-$text-color: #FFFFFF;
+$text-color: rgb(138,43,226) ;
 
 @import 'bootstrap';
 
-
-
+/* old css
+$body-bg: rgb(139,0,139);
+$navbar-inverse-bg: #bdc3c7;
+$link-color: #A366E0;
+$navbar-inverse-link-color: #9900CC;
+$brand-primary: #A366E0;
+$text-color: #FFFFFF;
+*/
 
 .wrapper {
     text-align: center;
