--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
     </button>
     <a href="/">
      
-     <img src= "assets/logo2.png">
+     <img src= "https://s3.amazonaws.com/marnaspals-dpal/logo2.jpg">
     
     </a>
   </div>
