--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 
        <p class = "wrapper">
 
-       	<a href="/donate"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation7.jpg"> </a>
+       	<!-- a href="/donate"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation7.jpg"> </a> -->
 
        </p>
 	
