--- a/app/views/pages/applyhere.html.erb
+++ b/app/views/pages/applyhere.html.erb
@@ -1,3 +1,4 @@
+<br></br>
 <div class="col-md-6 col-md-offset-3">
 <table class="table">
   <thead>
@@ -25,8 +26,13 @@
   		</tr>
   		<tr>
   				<th scope="row">4</th>
-  				<td>The Student must live <b>AND/OR</b> attend school in NJ</td>
+  				<td>The Student must live <b>AND/OR</b> attend school in NJ
+          </td>
   		</tr>
+      <tr>
+          <th scope="row">NOTE:</th>
+          <td>The application must be completed in one session, incomplete applications will not be saved. </td>
+      </tr>
 
 </table>
 </div>
