--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <html lang="en">
-  <br>
+
 
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -51,7 +51,7 @@
               <h2>Applying for an award?</h2>
               <p>Check out the eligibility requirements and apply for our scholarship. The applicaiton is open from 1/1 - 3/31.</p>
           
-              <p><a class="btn btn-md btn-primary" href="#" role="button">Apply Now</a></p>
+              <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Apply Now</a></p>
 
             </div>
           </div>
@@ -70,14 +70,20 @@
           </div>
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="false"></span>
-        <span class="sr-only">Previous</span>
-      </a>
+
+
+
+      <!-- <!-- <!-- <!-- <a class="left carousel-control"href="#myCarousel" role="button" data-slide="prev">
+
+          <!-- <img class = "align-middle" src = "\assets\leftarrow.png"> -->
+        
+      <!-- </a>
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+     
+        
+        <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-      </a>
+      </a>  --> 
     </div><!-- /.carousel -->
 
 </br>
