--- a/app/views/pages/vball.html.erb
+++ b/app/views/pages/vball.html.erb
@@ -1,7 +1,7 @@
 
 <h2> 4th Annual Volleyball Tournament </h2>
 
-<h4> Check back in January for details about the 4th Annual Volleyball Tournament. The Tournament is most likely going to be at Sondek Park in South Brunswick during the first weekend in June. Email dpal (at) marnaspals (dot) com if you would like more information or to get involved. </h4>
+<h4> Check back in January for details about the 4th Annual Volleyball Tournament. The Tournament is most likely going to be at Sondek Park in South Brunswick during the first weekend in June. Email dpal@marnaspals.com if you would like more information or to get involved. </h4>
 
 <div class="container">
 	<div class="wrapper">
