--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -11,7 +11,7 @@
     </button>
     <a href="/">
      
-     <img src= "https://s3.amazonaws.com/marnaspals-dpal/logo2.jpg">
+     <img src= "https://s3.amazonaws.com/marnaspals-dpal/logo2.png">
     
     </a>
   </div>
@@ -29,6 +29,19 @@
     <a href="/donate" class="pull-right"> <img src= "https://s3.amazonaws.com/marnaspals-dpal/makeadonation7.jpg"> </a>
   </div><!-- /.navbar-collapse -->
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-17334797-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </nav>
+
+<br></br>
+
 
