--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -3,24 +3,24 @@
 	<div class="wrapper">
 
 
-<h1> How would you like to help these students? </h1>
+<h1> How would your donation help a Marna's Pals scholar? </h1>
  <h5> *Does your company match donations? We'd love to help you get your company to match your donation and double your impact! </h5>
 	<br> 
 	</br>
 
 <div class="row">
-	<div class="col-xs-5 col-md-2">
+	<div class="col-xs-12 col-md-3">
 	  	<div class="item">
-            <h2> 1 Dining Hall Meal </h2>
+            <h2>1 Dining Hall Meal</h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9VPHHVMDMVMH6" title="We Spike for Scholarships" target="_blank" >
                 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/dininghallmeal.jpg">
               </a>
            
 		</div>
 	</div>
-    <div class="col-xs-5 col-xs-offset-1 col-md-2 col-md-offset-1">
+    <div class="col-xs-12 col-md-3 ">
   		<div class="item">
-            <h2> 1 Week of Coffee </h2>
+            <h2>1 Wk of Breakfast</h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ENG7ANLNK7KAA" title="We Spike for Scholarships" target="_blank" >
                 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/oneweekofcoffee.jpg">
               </a>
@@ -28,7 +28,7 @@
 		</div>
   	</div>
 
-  	<div class="col-xs-5 col-md-2 col-md-offset-1">
+  	<div class="col-xs-12 col-md-3">
   		<div class="item">
             <h2> 1 Book for Class </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YPP8FLBJ96JUE" title="We Spike for Scholarships" target="_blank" >
@@ -38,7 +38,7 @@
 		</div>
   	</div>
 
-  	<div class="col-xs-5 col-xs-offset-1 col-md-2 col-md-offset-1">
+  	<div class="col-xs-12 col-md-3">
   		<div class="item">
             <h2> School Supplies </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=C3QUD9H684748" title="We Spike for Scholarships" target="_blank" >
@@ -53,7 +53,7 @@
 
 <div class="row">
 
-	<div class="col-xs-5 col-md-2">
+	<div class="col-xs-12 col-md-3">
   		<div class="item">
             <h2> 1 Month of Groceries </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QKYC9Z6VDRQP2" title="We Spike for Scholarships" target="_blank" >
@@ -63,9 +63,9 @@
 		</div>
   	</div>
 
-	<div class="col-xs-5 col-xs-offset-1 col-md-2 col-md-offset-1">
+	<div class="col-xs-12 col-md-3 ">
   		<div class="item">
-            <h2> Parking Pass </h2>
+            <h2> Yearly Parking Pass </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=H9ADUE86Y52DA" title="We Spike for Scholarships" target="_blank" >
                 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/parkingpass.jpg">
               </a>
@@ -73,7 +73,7 @@
 		</div>
   	</div>
 
-  	<div class="col-xs-5 col-md-2 col-md-offset-1">
+  	<div class="col-xs-12 col-md-3">
   		<div class="item">
             <h2> A Semester of Books </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K4XRXDU9NBVCA" title="We Spike for Scholarships" target="_blank" >
@@ -83,9 +83,9 @@
 		</div>
   	</div>
 
-  	<div class="col-xs-5 col-xs-offset-1 col-md-2 col-md-offset-1">
+  	<div class="col-xs-12 col-md-3">
   		<div class="item">
-            <h2> A Meal Plan </h2>
+            <h2> A Semester Meal Plan </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SCEFYB6AZL3LN" title="We Spike for Scholarships" target="_blank" >
                 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/mealplan.jpg">
               </a>
@@ -99,9 +99,9 @@
 
 <div class="row">
 
-  <div class="col-xs-10 col-md-4 col-md-offset-4">
+  <div class="col-xs-12 col-md-4 col-md-offset-4">
       <div class="item">
-            <h2> Other </h2>
+            <h2> Choose Your Own </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3JSUNL5T6KQLS" title="We Spike for Scholarships" target = "_blank">
                 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/other.jpg">
               </a>
