container on carosuel

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <html lang="en">
 
-
+<div class = "container">
+  <br><br></br></br>
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
@@ -87,7 +88,7 @@
     </div><!-- /.carousel -->
 
 </br>
-
+</div>
 <div class="wrapper">
 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg" alt="Image for Tips">
 
