--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
                 <br></br>
                 <br></br>
               <h2>Meet Marna</h2>
-              <p>Marna was an amazing woman who valued her friends, family and helping others. This scholarship is in her honor. </p>
+              <p>This scholarship is in her honor. </p>
             
               <p><a class="btn btn-md btn-primary" href="\about" role="button">Learn More</a></p>
 
@@ -36,7 +36,7 @@
               <br></br>
               
               <h2>We awarded $15,000!</h2>
-              <p>Do you want to meet the 15 students that won an award this year? We're so proud of them. </p>
+              <p>Do you want to meet the 15 students that won an award this year? </p>
             
               <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Meet Them</a></p>
             </div>
@@ -50,7 +50,7 @@
               <br></br>
              
               <h2>Applying for an award?</h2>
-              <p>Check out the eligibility requirements and apply for our scholarship. The applicaiton is open from 1/1 - 3/31.</p>
+              <p>The applicaiton is open from 1/1 - 3/31.</p>
           
               <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Apply Now</a></p>
 
@@ -64,7 +64,7 @@
               <br></br><br></br>
               <br></br>
               <h2>Spiking for Scholarships</h2>
-              <p>Join the largest charity volleyball tournament in Central Jersey. Make a team or sign up yourself and  have a blast!</p>
+              <p>Join the largest charity volleyball tournament in Central Jersey. </p>
               <p><a class="btn btn-md btn-primary" href="\events" role="button">Join Now</a></p>
             
             </div>
