--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,8 @@
             <div class="carousel-caption">
                 <br></br>
                 <br></br>
-              <h2>Meet Marna</h2>
-              <p>This scholarship is in her honor. </p>
+              <h1>Meet Marna</h1>
+              <h2>This scholarship is in her honor. </h2>
             
               <p><a class="btn btn-md btn-primary" href="\about" role="button">Learn More</a></p>
 
@@ -35,8 +35,8 @@
               <br></br>
               <br></br>
               
-              <h2>We awarded $15,000!</h2>
-              <p>Do you want to meet the 15 students that won an award this year? </p>
+              <h1>We awarded $15,000!</h1>
+              <h2>Want to meet the 15 scholars this year? </h2>
             
               <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Meet Them</a></p>
             </div>
@@ -49,8 +49,8 @@
               <br></br>
               <br></br>
              
-              <h2>Applying for an award?</h2>
-              <p>The applicaiton is open from 1/1 - 3/31.</p>
+              <h1>Applying for an award?</h1>
+              <h2>The applicaiton is open from 1/1 - 3/31.</h2>
           
               <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Apply Now</a></p>
 
@@ -63,8 +63,8 @@
             <div class="carousel-caption">
               <br></br><br></br>
               <br></br>
-              <h2>Spiking for Scholarships</h2>
-              <p>Join the largest charity volleyball tournament in Central Jersey. </p>
+              <h1>Spiking for Scholarships</h1>
+              <h2>Join the largest charity volleyball tournament in Central Jersey. </h2>
               <p><a class="btn btn-md btn-primary" href="\events" role="button">Join Now</a></p>
             
             </div>
