--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -51,7 +51,7 @@
 
 <div class="item">
             
-              <a href="http://www.therun4hope.com" target="_blank" title="Run, Forrest, Run!">
+              <a href="/" target="_blank" title="Run, Forrest, Run!">
                 <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/runforhope.jpg">
               </a>
            
