--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,21 +3,22 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body style="background-color:#5200A3">
+  <body style="background-color:#FFFFFF">
 
     <div class = "container">
 
-    <h1 style="color: #FFFFFF">Hello my Pal! </h1>
+    <h1 style="color: #000000">Hello my Pal! </h1>
 
-    <p style="color: #FFFFFF">
+    <p style="color: #000000">
       Thank you for visiting <a style="color: #A366E0" href="http://www.marnaspals.com">www.marnaspals.com/.</a> <br>
+      If you'd like to help Marna's Pals or stay in touch, click <a style="color: #A366E0" href="https://marnaspals.mobilize.io/entities/4345/registrations"> HERE! </a> 
     </p>
 
-     <p style="color: #FFFFFF">
-      Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! Periodically, we'll send more cool stuff like this! 
+     <p style="color: #000000">
+      Below you will find our 9 tips to better scholarship applications! If you like it, feel free to share it online! To get more tips, and to complete your registration please visit <a style="color: #A366E0" href="https://marnaspals.mobilize.io/entities/4345/registrations"> HERE! </a> 
     </p>
 
-    <p style="color: #FFFFFF"> <a style="color: #A366E0" href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a style="color: #A366E0" href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
+    <p style="color: #000000"> <a style="color: #A366E0" href="http://www.facebook.com/MarnasPals"> Like us on Facebook! </a> to follow along with what's going on with Marna's Pals. Be sure to tweet #BeAPal when you post to Twitter and tag @MarnasPals. Are you on <a style="color: #A366E0" href="http://www.instagram.com/marnaspals"> Instagram? </a> </p>
 
     <img title="9tips infographic.jpg" src="https://s3.amazonaws.com/marnaspals-dpal/9tipsinfographic(small).jpeg">
 
