--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -95,8 +95,9 @@
 
 <br>
 
+<a class="btn btn-md btn-primary" href="https://marnaspals.mobilize.io/entities/4345/registrations" role="button">Sign Up Here!</a>
 
-<form class="form-inline" action="/subscribers" class="new_subscriber" id="new_subscriber" method="post">
+<!-- <form class="form-inline" action="/subscribers" class="new_subscriber" id="new_subscriber" method="post">
   <div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="nHHdWoL8aq3/6rHKYiX64uu3tlOBmDTMdsG19dD7t70=" /></div>
 
   <div class="form-group">
@@ -104,7 +105,7 @@
     
     <input class="form-control input-lg" id="subscriber_email" name="subscriber[email]" type="email"  placeholder="my.pal@example.com"/>
 
-  <button type="submit" class="btn btn-primary btn-lg" value="Create Subscriber">Send Me Free Tips</button>
+  <button type="submit" class="btn btn-primary btn-lg" value="Create Subscriber">Send Me Free Tips</button> -->
 
 
 </form>
