--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -95,7 +95,7 @@
 
 <br>
 
-<a class="btn btn-md btn-primary" href="https://marnaspals.mobilize.io/entities/4345/registrations" role="button">Sign Up Here!</a>
+<a class="btn btn-md btn-primary btn-lg" href="https://marnaspals.mobilize.io/entities/4345/registrations" role="button">Sign Up Here!</a>
 
 <!-- <form class="form-inline" action="/subscribers" class="new_subscriber" id="new_subscriber" method="post">
   <div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="nHHdWoL8aq3/6rHKYiX64uu3tlOBmDTMdsG19dD7t70=" /></div>
