--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <br><br></br></br>
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-interval="2500" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -74,18 +74,19 @@
 
 
 
-      <!-- <!-- <!-- <!-- <a class="left carousel-control"href="#myCarousel" role="button" data-slide="prev">
+       <a class="left carousel-control"href="#myCarousel" role="button" data-slide="prev">
 
           <!-- <img class = "align-middle" src = "\assets\leftarrow.png"> -->
         
-      <!-- </a>
+      </a>
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
      
         
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>  --> 
-    </div><!-- /.carousel -->
+    </div>
+    <!-- /.carousel -->
 
 </br>
 </div>
