--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -82,9 +82,9 @@
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
      
         
-        <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>  --> 
+        <!-- <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span> -->
+      </a>  
     </div>
     <!-- /.carousel -->
 
