turn on vball form

--- a/app/views/pages/vball.html.erb
+++ b/app/views/pages/vball.html.erb
@@ -1,14 +1,36 @@
+<br></br>
+<h2 align="center"> Registration is now OPEN for the 4th Annual Volleyball Tournament! </h2>
 
-<h2> 4th Annual Volleyball Tournament </h2>
-
-<h4> Check back in January for details about the 4th Annual Volleyball Tournament. The Tournament is most likely going to be at Sondek Park in South Brunswick during the first weekend in June. Email dpal@marnaspals.com if you would like more information or to get involved. </h4>
+<h4 align="center"> Email dpal@marnaspals.com if you would like more information or to get involved. </h4>
 
 <div class="container">
 	<div class="wrapper">
 		
-<h1> Thank you to all of our sponsors! </h1>
+<iframe src="https://docs.google.com/forms/d/1XHnYid-E0weFoIhalwCz3ymod3x8sKkWjbz_i3kgv1Y/viewform?embedded=true" width="760" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-<img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/vballsponsors.jpg">
+<h3 align="center"> Please pay with the button below, to complete your registration. </h3>
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="Z7PT9JX9FJRBA">
+
+<table align="center">
+<tr><td><input type="hidden" name="on0" value="Registration Type">Registration Type</td></tr><tr><td><select name="os0">
+	<option value="Team">Team $165.00 USD</option>
+	<option value="Individual">Individual $35.00 USD</option>
+</select> </td></tr>
+<tr><td><input type="hidden" name="on1" value="League">League</td></tr><tr><td><select name="os1">
+	<option value="Men's">Men's </option>
+	<option value="Co-ed">Co-ed </option>
+	<option value="Women's">Women's </option>
+</select> </td></tr>
+<tr><td><input type="hidden" name="on2" value="Team Name">Team Name</td></tr><tr><td><input type="text" style="background-color:purple" name="os2" maxlength="200"></td></tr>
+</table>
+
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 
 	</div>
 </div>
